--- a/landing.html
+++ b/landing.html
@@ -16,6 +16,13 @@
   gtag('js', new Date());
 
   gtag('config', 'G-3Z5WEHK87B');
+$(function () {
+    var parent = $("#shuffle");
+    var divs = parent.children();
+    while (divs.length) {
+        parent.append(divs.splice(Math.floor(Math.random() * divs.length), 1)[0]);
+    }
+});
 </script>
 <style>
   
@@ -123,7 +130,7 @@
 </div>
 <div class="horizontal-list-wrapper slots-wrapper" id="slot-games-wrapper"> 
 
-<div class="game-one-half-slot">
+<!-- <div class="game-one-half-slot">
 <a class="login-modal" onclick="window.open('https://rebrand.ly/tesplay', 'TESPLAY', 'resizable=no,status=no,location=no,toolbar=no,menubar=no,scrollbars=yes,width=800px,left=450,height=800px,top=200');" data-backdrop="static" data-keyboard="false">
 <div class="game-box-slots" style="position: relative;">
 <div class="badge-game pragmatic"><i></i></div>
@@ -131,9 +138,9 @@
 <div class="game-title-slots">TESPLAY</div>
 </div>
 </a>
-</div>
+</div> -->
 	
-<div class="game-one-half-slot">
+<!-- <div class="game-one-half-slot">
 <a class="login-modal" onclick="window.open('https://rebrand.ly/slotasli', 'SLOT ASLI', 'resizable=no,status=no,location=no,toolbar=no,menubar=no,scrollbars=yes,width=800px,left=450,height=800px,top=200');" data-backdrop="static" data-keyboard="false">
 <div class="game-box-slots" style="position: relative;">
 <div class="badge-game pragmatic"><i></i></div>
@@ -141,10 +148,10 @@
 <div class="game-title-slots">SLOT ASLI</div>
 </div>
 </a>
-</div>
+</div> -->
 	
-<div class="game-one-half-slot">
-<a class="login-modal" onclick="window.open('https://rebrand.ly/slotbaru88', 'SLOT BARU 88', 'resizable=no,status=no,location=no,toolbar=no,menubar=no,scrollbars=yes,width=800px,left=450,height=800px,top=200');" data-backdrop="static" data-keyboard="false">
+<div class="game-one-half-slot" id="shuffle">
+<a class="login-modal" onclick="window.open('https://172.105.112.199/register?ref=ahuiqq', 'SLOT BARU 88', 'resizable=no,status=no,location=no,toolbar=no,menubar=no,scrollbars=yes,width=800px,left=450,height=800px,top=200');" data-backdrop="static" data-keyboard="false">
 <div class="game-box-slots" style="position: relative;">
 <div class="badge-game pragmatic"><i></i></div>
 <img class="responsive-image lazy" src="game_pic/square/web/slotbaru88.jpg" data-original="game_pic/square/web/slotbaru88.jpg" alt="SLOT BARU 88">
@@ -153,17 +160,17 @@
 </a>
 </div>
 
-<div class="game-one-half-slot">
-<a class="login-modal" onclick="window.open('https://rebrand.ly/aseanslot', 'ASEANSLOT', 'resizable=no,status=no,location=no,toolbar=no,menubar=no,scrollbars=yes,width=800px,left=450,height=800px,top=200');" data-backdrop="static" data-keyboard="false">
+<div class="game-one-half-slot" id="shuffle">
+<a class="login-modal" onclick="window.open('https://172.105.124.231/register?ref=hislot88', 'HISLOT', 'resizable=no,status=no,location=no,toolbar=no,menubar=no,scrollbars=yes,width=800px,left=450,height=800px,top=200');" data-backdrop="static" data-keyboard="false">
 <div class="game-box-slots" style="position: relative;">
 <div class="badge-game pragmatic"><i></i></div>
-<img class="responsive-image lazy" src="game_pic/square/web/aseanslot.png.jpg" data-original="game_pic/square/web/aseanslot.png.jpg" alt="ASEANSLOT">
-<div class="game-title-slots">ASEANSLOT</div>
+<img class="responsive-image lazy" src="game_pic/square/web/hislot.png" data-original="game_pic/square/web/hislot.png" alt="HISLOT">
+<div class="game-title-slots">HISLOT</div>
 </div>
 </a>
 </div>  
 
-<div class="game-one-half-slot">
+<!-- <div class="game-one-half-slot">
 <a class="login-modal" onclick="window.open('https://rebrand.ly/strikewin', 'STRIKEWIN', 'resizable=no,status=no,location=no,toolbar=no,menubar=no,scrollbars=yes,width=800px,left=450,height=800px,top=200');" data-backdrop="static" data-keyboard="false">
 <div class="game-box-slots" style="position: relative;">
 <div class="badge-game pragmatic"><i></i></div>
@@ -171,9 +178,9 @@
 <div class="game-title-slots">STRIKEWIN</div>
 </div>
 </a>
-</div>
+</div> -->
 
-<div class="game-one-half-slot">
+<!-- <div class="game-one-half-slot">
 <a class="login-modal" onclick="window.open('https://rebrand.ly/regplay', 'REGPLAY', 'resizable=no,status=no,location=no,toolbar=no,menubar=no,scrollbars=yes,width=800px,left=450,height=800px,top=200');" data-backdrop="static" data-keyboard="false">
 <div class="game-box-slots" style="position: relative;">
 <div class="badge-game pragmatic"><i></i></div>
@@ -181,7 +188,7 @@
 <div class="game-title-slots">REGPLAY</div>
 </div>
 </a>
-</div>
+</div> -->
   
   
 
