--- a/landing.html
+++ b/landing.html
@@ -151,7 +151,7 @@ $(function () {
 </div> -->
 	
 <div class="game-one-half-slot" id="shuffle">
-<a class="login-modal" onclick="window.open('https://172.105.112.199/register?ref=ahuiqq', 'SLOT BARU 88', 'resizable=no,status=no,location=no,toolbar=no,menubar=no,scrollbars=yes,width=800px,left=450,height=800px,top=200');" data-backdrop="static" data-keyboard="false">
+<a class="login-modal" onclick="window.open('https://172.105.112.199/register', 'SLOT BARU 88', 'resizable=no,status=no,location=no,toolbar=no,menubar=no,scrollbars=yes,width=800px,left=450,height=800px,top=200');" data-backdrop="static" data-keyboard="false">
 <div class="game-box-slots" style="position: relative;">
 <div class="badge-game pragmatic"><i></i></div>
 <img class="responsive-image lazy" src="game_pic/square/web/slotbaru88.jpg" data-original="game_pic/square/web/slotbaru88.jpg" alt="SLOT BARU 88">
