--- a/landing.html
+++ b/landing.html
@@ -139,26 +139,6 @@ $(function () {
 </div>
 </a>
 </div> -->
-	
-<!-- <div class="game-one-half-slot">
-<a class="login-modal" onclick="window.open('https://rebrand.ly/slotasli', 'SLOT ASLI', 'resizable=no,status=no,location=no,toolbar=no,menubar=no,scrollbars=yes,width=800px,left=450,height=800px,top=200');" data-backdrop="static" data-keyboard="false">
-<div class="game-box-slots" style="position: relative;">
-<div class="badge-game pragmatic"><i></i></div>
-<img class="responsive-image lazy" src="game_pic/square/web/slotasli.png" data-original="game_pic/square/web/slotasli.png" alt="SLOT ASLI">
-<div class="game-title-slots">SLOT ASLI</div>
-</div>
-</a>
-</div> -->
-	
-<div class="game-one-half-slot" id="shuffle">
-<a class="login-modal" onclick="window.open('https://172.105.112.199/register', 'SLOT BARU 88', 'resizable=no,status=no,location=no,toolbar=no,menubar=no,scrollbars=yes,width=800px,left=450,height=800px,top=200');" data-backdrop="static" data-keyboard="false">
-<div class="game-box-slots" style="position: relative;">
-<div class="badge-game pragmatic"><i></i></div>
-<img class="responsive-image lazy" src="game_pic/square/web/slotbaru88.jpg" data-original="game_pic/square/web/slotbaru88.jpg" alt="SLOT BARU 88">
-<div class="game-title-slots">SLOT BARU 88</div>
-</div>
-</a>
-</div>
 
 <div class="game-one-half-slot" id="shuffle">
 <a class="login-modal" onclick="window.open('https://172.105.124.231/register?ref=hislot88', 'HISLOT', 'resizable=no,status=no,location=no,toolbar=no,menubar=no,scrollbars=yes,width=800px,left=450,height=800px,top=200');" data-backdrop="static" data-keyboard="false">
@@ -169,7 +149,27 @@ $(function () {
 </div>
 </a>
 </div>  
-
+	
+<div class="game-one-half-slot" id="shuffle">
+<a class="login-modal" onclick="window.open('https://172.105.112.199/register', 'SLOT BARU 88', 'resizable=no,status=no,location=no,toolbar=no,menubar=no,scrollbars=yes,width=800px,left=450,height=800px,top=200');" data-backdrop="static" data-keyboard="false">
+<div class="game-box-slots" style="position: relative;">
+<div class="badge-game pragmatic"><i></i></div>
+<img class="responsive-image lazy" src="game_pic/square/web/slotbaru88.jpg" data-original="game_pic/square/web/slotbaru88.jpg" alt="SLOT BARU 88">
+<div class="game-title-slots">SLOT BARU 88</div>
+</div>
+</a>
+</div>
+	
+<div class="game-one-half-slot">
+<a class="login-modal" onclick="window.open('https://rebrand.ly/slotasli', 'SLOT ASLI', 'resizable=no,status=no,location=no,toolbar=no,menubar=no,scrollbars=yes,width=800px,left=450,height=800px,top=200');" data-backdrop="static" data-keyboard="false">
+<div class="game-box-slots" style="position: relative;">
+<div class="badge-game pragmatic"><i></i></div>
+<img class="responsive-image lazy" src="game_pic/square/web/slotasli.png" data-original="game_pic/square/web/slotasli.png" alt="SLOT ASLI">
+<div class="game-title-slots">SLOT ASLI</div>
+</div>
+</a>
+</div>
+	
 <!-- <div class="game-one-half-slot">
 <a class="login-modal" onclick="window.open('https://rebrand.ly/strikewin', 'STRIKEWIN', 'resizable=no,status=no,location=no,toolbar=no,menubar=no,scrollbars=yes,width=800px,left=450,height=800px,top=200');" data-backdrop="static" data-keyboard="false">
 <div class="game-box-slots" style="position: relative;">
