--- a/landing.html
+++ b/landing.html
@@ -191,7 +191,11 @@ $(function () {
 </div> -->
   
   
-
+<center>
+Agen Resmi Pragmatic Play, Joker, Habanero, Microgaming, Playtech Dan lain nya. Situs dengan layanan terbaik dan teraman!<br>
+untuk Demo play silahkan klik :<br>
+<h2><a href="https://main-slot.com">main-slot.com</a></h2>
+</center>
 
 <div class="clear"></div>
 </div>
