--- a/landing.html
+++ b/landing.html
@@ -190,14 +190,13 @@ $(function () {
 </a>
 </div> -->
   
-  
-<center>
+<div class="clear"></div>
+<div style="text-align:center;">
 Agen Resmi Pragmatic Play, Joker, Habanero, Microgaming, Playtech Dan lain nya. Situs dengan layanan terbaik dan teraman!<br>
 untuk Demo play silahkan klik :<br>
-<h2><a href="https://main-slot.com">main-slot.com</a></h2>
-</center>
-
-<div class="clear"></div>
+<div class="btn btn-primary btn-block btn-lg mtb-10" onclick="window.open('https://main-slot.com', 'mainslot', 'resizable=no,status=no,location=no,toolbar=no,menubar=no,scrollbars=yes,width=800px,left=450,height=800px,top=200');">main-slot.com</div>
+<!--<h2>< href="https://main-slot.com">main-slot.com</a></h2>-->
+</div>
 </div>
 </div>
 </div>
