--- a/landing.html
+++ b/landing.html
@@ -115,7 +115,7 @@ $(function () {
 <div id="page-content-wrapper">
 <div class="header">
 
-<a class="navbar-brand" href="#">Agen Resmi Pragmatic, Joker & PKV</a>
+<a class="navbar-brand" href="#">Agen Resmi Pragmatic, Joker & Lain Lain</a>
 
 
 </div>
