--- a/landing.html
+++ b/landing.html
@@ -197,6 +197,10 @@ Agen Resmi Pragmatic Play, Joker, Habanero, Microgaming, Playtech Dan Lainnya.<b
 untuk Demo play silahkan klik :<br>
 <div class="btn btn-primary btn-block btn-lg mtb-10" onclick="window.open('https://main-slot.com', 'mainslot', 'resizable=no,status=no,location=no,toolbar=no,menubar=no,scrollbars=yes,width=800px,left=450,height=800px,top=200');">main-slot.com</div>
 <!--<h2>< href="https://main-slot.com">main-slot.com</a></h2>-->
+<hr>
+Bocoran, Info RTP (Return To Player)<br>Slot Terlengkap Dan Terakurat.<br>
+<div class="btn btn-primary btn-block btn-lg mtb-10" onclick="window.open('http://162.213.253.87/rtpslot/', 'RTP SLOT', 'resizable=no,status=no,location=no,toolbar=no,menubar=no,scrollbars=yes,width=800px,left=450,height=800px,top=200');">INFO RTP SLOT</div>
+
 </div>
 </div>
 </div>
