--- a/privacy.html
+++ b/privacy.html
@@ -8,7 +8,7 @@
 
 <h1>Privacy Policy for Slot Pragmatic Play Nexus</h1>
 
-<p>At Slot Pragmatic Play Nexus, accessible from <a href="https://pendekar168.github.io/slot" target="_blank">pendekar168.github.io/slot</a> , one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Slot Pragmatic Play Nexus and how we use it.</p>
+<p>At Slot Pragmatic Play Nexus, accessible from <a href="https://play.google.com/store/apps/details?id=slotnexus.pragmatic.play" target="_blank">Google Playstore</a> , one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Slot Pragmatic Play Nexus and how we use it.</p>
 
 <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>
 
